--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
   "name": "al-mentor-database",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Al-Mentor Database with WebSocket Chat",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon config/server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.13.2",
-    "stripe": "^18.1.1"
+    "mongoose": "^7.5.0",
+    "stripe": "^18.1.1",
+    "ws": "^8.14.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
